[gd_scene load_steps=70 format=3 uid="uid://2ywol3pxb1x"]

[ext_resource type="Script" uid="uid://yhicb4yg4hlt" path="res://Scenes/skeleton.gd" id="1_sfdtf"]
[ext_resource type="Texture2D" uid="uid://bkuxmbbbbn2tk" path="res://Assets/Sprites/5-Skeleton/Skeleton_01_White_Attack1.png" id="2_ks230"]
[ext_resource type="Texture2D" uid="uid://d3gl0of26yubc" path="res://Assets/Sprites/5-Skeleton/Skeleton_01_White_Attack2.png" id="3_shq1q"]
[ext_resource type="Texture2D" uid="uid://b0k3xm0tjvs6n" path="res://Assets/Sprites/5-Skeleton/Skeleton_01_White_Die.png" id="4_xbfmp"]
[ext_resource type="Texture2D" uid="uid://67bg6b7wgsla" path="res://Assets/Sprites/5-Skeleton/Skeleton_01_White_Hurt.png" id="5_q1wii"]
[ext_resource type="Texture2D" uid="uid://ivhhnn7y2r2f" path="res://Assets/Sprites/5-Skeleton/Skeleton_01_White_Idle.png" id="6_lw4xn"]
[ext_resource type="Texture2D" uid="uid://kdoceio64twd" path="res://Assets/Sprites/5-Skeleton/Skeleton_01_White_Walk.png" id="7_clg8n"]
[ext_resource type="Script" uid="uid://k6otjkt6jhi2" path="res://Scenes/EnemyHealthBar.gd" id="8_shq1q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_skeleton_body"]
size = Vector2(42, 91)

[sub_resource type="AtlasTexture" id="AtlasTexture_cf6qe"]
atlas = ExtResource("3_shq1q")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksbdh"]
atlas = ExtResource("3_shq1q")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_di62f"]
atlas = ExtResource("3_shq1q")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjh88"]
atlas = ExtResource("3_shq1q")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfcpp"]
atlas = ExtResource("3_shq1q")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oelfx"]
atlas = ExtResource("3_shq1q")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1o88"]
atlas = ExtResource("3_shq1q")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhll6"]
atlas = ExtResource("3_shq1q")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs872"]
atlas = ExtResource("3_shq1q")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxjam"]
atlas = ExtResource("2_ks230")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4moy"]
atlas = ExtResource("2_ks230")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdwqs"]
atlas = ExtResource("2_ks230")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6q7w"]
atlas = ExtResource("2_ks230")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_anwrq"]
atlas = ExtResource("2_ks230")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yfbv"]
atlas = ExtResource("2_ks230")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcsoq"]
atlas = ExtResource("2_ks230")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt1qk"]
atlas = ExtResource("2_ks230")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlyal"]
atlas = ExtResource("2_ks230")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uebny"]
atlas = ExtResource("2_ks230")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_si4ap"]
atlas = ExtResource("4_xbfmp")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7hgc"]
atlas = ExtResource("4_xbfmp")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_06y4e"]
atlas = ExtResource("4_xbfmp")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqvih"]
atlas = ExtResource("4_xbfmp")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjfp6"]
atlas = ExtResource("4_xbfmp")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6yni"]
atlas = ExtResource("4_xbfmp")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbn8f"]
atlas = ExtResource("4_xbfmp")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_trmo5"]
atlas = ExtResource("4_xbfmp")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6aie"]
atlas = ExtResource("4_xbfmp")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3huv"]
atlas = ExtResource("4_xbfmp")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytwjw"]
atlas = ExtResource("4_xbfmp")
region = Rect2(960, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rxtf"]
atlas = ExtResource("4_xbfmp")
region = Rect2(1056, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v28h"]
atlas = ExtResource("4_xbfmp")
region = Rect2(1152, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c33h"]
atlas = ExtResource("5_q1wii")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1y7k0"]
atlas = ExtResource("5_q1wii")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmxn5"]
atlas = ExtResource("5_q1wii")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_icji2"]
atlas = ExtResource("5_q1wii")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sfnd"]
atlas = ExtResource("5_q1wii")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_80afr"]
atlas = ExtResource("6_lw4xn")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar42f"]
atlas = ExtResource("6_lw4xn")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsi3d"]
atlas = ExtResource("6_lw4xn")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vplso"]
atlas = ExtResource("6_lw4xn")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jjs6"]
atlas = ExtResource("6_lw4xn")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bswv5"]
atlas = ExtResource("6_lw4xn")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4qq2"]
atlas = ExtResource("6_lw4xn")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8xff"]
atlas = ExtResource("6_lw4xn")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks230"]
atlas = ExtResource("7_clg8n")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_shq1q"]
atlas = ExtResource("7_clg8n")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbfmp"]
atlas = ExtResource("7_clg8n")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1wii"]
atlas = ExtResource("7_clg8n")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw4xn"]
atlas = ExtResource("7_clg8n")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_clg8n"]
atlas = ExtResource("7_clg8n")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b0ob"]
atlas = ExtResource("7_clg8n")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ao8qm"]
atlas = ExtResource("7_clg8n")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3lw1"]
atlas = ExtResource("7_clg8n")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnh7q"]
atlas = ExtResource("7_clg8n")
region = Rect2(864, 0, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_skeleton"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf6qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksbdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di62f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjh88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfcpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oelfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1o88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhll6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs872")
}],
"loop": false,
"name": &"attack1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxjam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4moy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdwqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6q7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anwrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yfbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcsoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt1qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlyal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uebny")
}],
"loop": false,
"name": &"attack2",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_si4ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7hgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06y4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqvih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjfp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6yni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbn8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trmo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6aie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3huv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytwjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rxtf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v28h")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c33h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1y7k0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmxn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icji2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sfnd")
}],
"loop": false,
"name": &"hurt",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80afr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar42f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsi3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vplso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jjs6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bswv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4qq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8xff")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks230")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shq1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbfmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1wii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw4xn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clg8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b0ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ao8qm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3lw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnh7q")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_attack"]
radius = 65.0077

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xbfmp"]
bg_color = Color(0.3, 0.1, 0.1, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1wii"]
bg_color = Color(1.44392e-07, 0.726904, 0.14159, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_detection"]
radius = 665.027

[node name="SkeletonEnemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 6
script = ExtResource("1_sfdtf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, -21.5)
shape = SubResource("RectangleShape2D_skeleton_body")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["enemies"]]
texture_filter = 1
position = Vector2(0, -40)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_skeleton")
animation = &"attack1"

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0

[node name="AttackShape" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(34, -30)
shape = SubResource("CircleShape2D_attack")
disabled = true

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="HurtTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(40, 4)
offset_left = -71.0
offset_top = -97.0
offset_right = 49.0
offset_bottom = -85.0
theme_override_styles/background = SubResource("StyleBoxFlat_xbfmp")
theme_override_styles/fill = SubResource("StyleBoxFlat_q1wii")
max_value = 75.0
value = 75.0
show_percentage = false
script = ExtResource("8_shq1q")
follow_offset = Vector2(0, -31.235)

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="DetectionShape" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -30)
shape = SubResource("CircleShape2D_detection")
